# Copyright (C) 2022 GPL 3 and higher by Ingo Höft,  <Ingo@Hoeft-online.de>
# Redistribution only with this Copyright remark. Last modified: 2022-09-16

cmake_minimum_required(VERSION 3.18)
include(../project-header.cmake)

# set the project name and version
project(MOCK VERSION 0001
        DESCRIPTION "Tests for mocking."
        HOMEPAGE_URL "https://github.com/ingo-h")


add_subdirectory(./proofs)
